--- a/Concurso - TIA - Regular/concurso-maqueta/index.html
+++ b/Concurso - TIA - Regular/concurso-maqueta/index.html
@@ -33,7 +33,7 @@
                     <li><a href="https://www.wikipedia.org" target="_blank">Wikipedia</a></li>
                     <li><a href="https://www.openai.com" target="_blank">OpenAI</a></li>
                 </ul>
-                <h1>Visita el artículo - BLACK FREEDAY</h1>
+                <h1>Visita el artículo - BLACK FRIDAY</h1>
             <a href="https://www.google.com" target="_blank"><img src="i3.jpg" alt="Tester" class="tester"></a>
             </aside>
         </section>
@@ -70,13 +70,13 @@
             <h2>Contacto</h2>
             <form action="https://formtester.goodbytes.be/post.php" method="post">
                 <label for="nombre">Nombre:</label>
-                <input type="text" id="nombre" name="nombre" required>
+                <input type="text" id="nombre" name="nombre" placeholder="mariano morel" required>
 
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email" placeholder="marianomorel@fi.mdp.edu.ar"  required>
 
                 <label for="mensaje">Mensaje:</label>
-                <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
+                <textarea id="mensaje" name="mensaje" rows="5" placeholder="escriba aquí su mensaje" maxlength="200" autocomplete="on"></textarea>
 
                 <button type="submit">Enviar</button>
             </form>
